--- a/.gitignore
+++ b/.gitignore
@@ -2,5 +2,11 @@ venv
 build
 arvestapi.egg-info
 .DC_Store
-examples/password.txt
+examples/login
+examples/media
+examples/tests
 examples/__pycache__
+debug
+coeso-reupload
+examples/fun
+.DS_Store
